--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  "name": "api",
+  "version": "1.0.0",
+  "main": "src/app.js",
+  "scripts": {
+    "start": "node src/app.js"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0"
