--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "api",
   "version": "1.0.0",
-  "main": "src/app.js",
+  "main": "api.js", 
   "scripts": {
-    "start": "node src/app.js"
+    "start": "node api.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
