--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "api",
+  "name": "api-projeto-final",
   "version": "1.0.0",
-  "main": "api.js", 
+  "main": "api.js",
   "scripts": {
-  "start": "node api.js",
-  "test": "echo \"Error: no test specified\" && exit 1"
-},
-"engines": {
-  "node": ">=16.0.0"
-},
- "dependencies": {
-  "express": "^4.18.2",
-  "cors": "^2.8.5",
-  "path-to-regexp": "^6.2.1"
-}
+    "start": "node api.js",
+    "dev": "nodemon api.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2"
+  },
+  "engines": {
+    "node": ">=16.0.0"
+  }
 }
